--- a/langchain_learn.ipynb
+++ b/langchain_learn.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e3550528",
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'ce41d5431d384915ac70d24c61a62516.PCLogAY2BQZBd5RQ'"
+    "api_key = 'your api key'"
    ]
   },
   {
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "41b8b7d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.document_loaders import PyMuPDFLoader\n",
     "\n",
-    "pdf_path = '/Users/chuhongjie/Desktop/leetcode/myAgent/mydb/大模型基础 完整版.pdf'\n",
+    "pdf_path = 'path/to/大模型基础 完整版.pdf'\n",
     "loader = PyMuPDFLoader(pdf_path)\n",
     "pdf_pages = loader.load()\n"
    ]
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6c14bc90",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
     "from zhipuai_embedding import ZhipuAIEmbeddings\n",
     "from langchain_community.vectorstores import Chroma\n",
     "embedding = ZhipuAIEmbeddings()\n",
-    "persist_directory = '/Users/chuhongjie/Desktop/leetcode/myAgent/mydb'\n",
+    "persist_directory = 'path/to/myAgent/mydb'\n",
     "vectordb = Chroma.from_documents(\n",
     "    embedding=embedding,\n",
     "    persist_directory=persist_directory,\n",
@@ -464,7 +464,7 @@
     "from langchain_core.documents import Document\n",
     "\n",
     "# 构建检索器\n",
-    "persist_directory = '/Users/chuhongjie/Desktop/leetcode/myAgent/mydb'\n",
+    "persist_directory = 'path/to/myAgent/mydb'\n",
     "vectordb = Chroma(\n",
     "    embedding_function=embedding,\n",
     "    persist_directory=persist_directory\n",
